Prevent jobs list from collapsing in small screens

--- a/src/main/resources/assets/app/scripts/styles/core.less
+++ b/src/main/resources/assets/app/scripts/styles/core.less
@@ -710,12 +710,7 @@ textarea::-webkit-input-placeholder {
 }
 
 .results {
-  bottom: 0;
-  left: 15px;
   overflow: auto;
-  position: absolute;
-  right: 0;
-  top: 147px;
 }
 
 .sched .small-input {
